# ai-engineering-2025

./: README.md
homeworks/HW01/: HW01.ipynb
homeworks/HW02/: HW02.ipynb
homeworks/HW03/eda-cli/: HW03_check.ipynb  README.md  pyproject.toml
homeworks/HW04/eda-cli/: README.md  pyproject.toml
homeworks/HW04/eda-cli/src/eda_cli/: __init__.py  api.py  cli.py  core.py  viz.py
homeworks/HW04/eda-cli/tests/: test_core.py
