[project]
name = "eda-cli"
version = "0.1.0"
description = "Mini EDA CLI for HW03"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "matplotlib>=3.7",
  "click>=8.1",
  "fastapi>=0.127.1",
  "uvicorn[standard]>=0.40.0",
  "python-multipart>=0.0.21",
  "typer>=0.21.0",
]

[project.scripts]
eda-cli = "eda_cli.cli:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
package = true
